// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Children в tsx преобразовывается в content wml tsx вставляет Wasaby в Wasaby 1`] = `
<div>
  <div>
    <div
      class="inner-class react-inner patched-wasaby-class react-outer"
      tabindex="0"
    >
      Wasaby
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml Объединение ref, в Wasaby вставляется HTMLElement: Проверка вёрстки 1`] = `
<div>
  <div
    class="rootReactForwardingRef"
  >
    <div
      class="wasabyContentInRoot contentWithRef"
    >
      Hello content
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml Объединение ref, в Wasaby вставляется Wasaby: Проверка вёрстки 1`] = `
<div>
  <div
    class="rootReactForwardingRef"
  >
    <div
      class="inner-class contentWithRef"
      tabindex="0"
    >
      Wasaby
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml контрол не патчит content 1`] = `
<div>
  <div
    class="rootReactComponent"
  >
    <div
      class="wasabySimpleContent"
      tabindex="0"
    >
      <div
        class="content"
      >
        Hello content
      </div>
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml контрол патчит content 1`] = `
<div>
  <div
    class="rootReactComponent"
  >
    <div
      class="wasabySimpleContent"
      tabindex="0"
    >
      <div
        class="patchedClass content"
      >
        Hello content
      </div>
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml контрол прокидывает content дальше 1`] = `
<div>
  <div
    class="rootReactComponent"
  >
    <div
      class="wasabySimpleContent wasaby-proxy-children"
      tabindex="0"
    >
      <div
        class="content"
      >
        Hello content
      </div>
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml не происходит лишних перерисовок 1 (перерисовка по клику происходит и счетчик выводится) 1`] = `
<div>
  <div>
    <button>
      +1
    </button>
    <div>
      0
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml не происходит лишних перерисовок 1 (перерисовка по клику происходит и счетчик выводится) 2`] = `
<div>
  <div>
    <button>
      +1
    </button>
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml не происходит лишних перерисовок 2 (перерисовка по клику не происходит) 1`] = `
<div>
  <div>
    <button>
      +1
    </button>
    <div>
      0
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml не происходит лишних перерисовок 2 (перерисовка по клику не происходит) 2`] = `
<div>
  <div>
    <button>
      +1
    </button>
    <div>
      0
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml шаблон не патчит content 1`] = `
<div>
  <div
    class="rootReactComponent"
  >
    <div
      class="wasabySimpleContent"
      tabindex="0"
    >
      <div
        class="content"
      >
        Hello content
      </div>
    </div>
  </div>
</div>
`;

exports[`Children в tsx преобразовывается в content wml шаблон патчит content 1`] = `
<div>
  <div
    class="rootReactComponent"
  >
    <div
      class="wasabySimpleContent"
      tabindex="0"
    >
      <div
        class="patchedClass content"
      >
        Hello content
      </div>
    </div>
  </div>
</div>
`;
